clusters/raspberry/workloads/blog/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-backend
  template:
    metadata:
      labels:
        app: blog-backend
    spec:
      containers:
        - name: blog-backend
          image: gendos123/blog-backend:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: dockerhub-cred
