clusters/raspberry/workloads/blog/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-backend
spec:
  type: NodePort
  selector:
    app: blog-backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31001
      protocol: TCP
