clusters/raspberry/workloads/blog/backend/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-backend
  namespace: blog
spec:
  podSelector:
    matchLabels:
      app: blog-backend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
